wrong completion fixxed